2006-10-27  Paul J Stevens <paul@nfg.nl>

	* debian/dbmail-ldap.config, debian/dbmail-ldap.postinst, 
	  debian/dbmail-ldap.templates, debian/dbmail-mysql.config, 
	  debian/dbmail-mysql.postinst, debian/dbmail-mysql.templates, 
	  debian/dbmail-pgsql.config, debian/dbmail-pgsql.postinst, 
	  debian/dbmail-pgsql.templates, debian/dbmail-sieve.config, 
	  debian/dbmail-sqlite.config, debian/dbmail-sqlite.postinst, 
	  debian/dbmail-sqlite.templates, debian/dbmail.config, 
	  debian/dbmail.postinst, debian/dbmail.preinst, 
	  debian/dbmail.templates, debian/po/cs.po, debian/po/de.po, 
	  debian/po/es.po, debian/po/fr.po, debian/po/it.po, debian/po/ja.po, 
	  debian/po/nl.po, debian/po/pt_BR.po, debian/po/templates.1po, 
	  debian/po/templates.pot:
	merge packaging work by Lars Kneschke
	* debian/control, debian/dbmail-pgsql.templates, 
	  debian/dbmail-sqlite.templates, debian/dbmail.config, 
	  debian/dbmail.preinst, debian/rules:
	minor cleanups in packaging
	* dbmail.conf:
	beautify dbmail.conf
	* debian/dbmail-ldap.postinst, debian/dbmail-mysql.postinst, 
	  debian/dbmail-pgsql.postinst, debian/dbmail-sqlite.postinst, 
	  debian/dbmail.postinst:
	cleanup postinst files
	* db.c:
	make db_purge_deleted scale better
	* debian/changelog, debian/dbmail-mysql.examples, 
	  debian/dbmail-pgsql.examples, debian/dbmail-sqlite.examples, 
	  debian/rules:
	debian packaging
	* Makefile.am, modules/Makefile.am:
	installation of libdbmail and modules
	* check_dbmail_message.c, db.c, dbmail-message.c, misc.c, 
	  test-scripts/testbox:
	handle unencoded 8bit headers

2006-10-26  Paul J Stevens <paul@nfg.nl>

	* sql/mysql/2_1_7-2_1_8.mysql, sql/mysql/2_1_7-2_2_0.mysql, 
	  sql/mysql/migrate_from_2.0_to_2.1.mysql, 
	  sql/mysql/migrate_from_2.0_to_2.2.mysql, 
	  sql/postgresql/2_1_7-2_1_8.pgsql, sql/postgresql/2_1_7-2_2_0.pgsql, 
	  sql/postgresql/migrate_from_2.0_to_2.1.pgsql, 
	  sql/postgresql/migrate_from_2.0_to_2.2.pgsql, 